2010-04-05  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Darin Adler.

        Escape control characters in CSS string value when it is serialilzed.

        When WebKit serializes a CSS string value that contains binary characters
        ('\0\1\2' for example), it did not escape these characters. As a result,
        users got (invisible) control characters through scripts. This change fixes
        this issue.

        As a side effect, two separate codes for escaping CSS strings are merged, and
        become a public function (quoteCSSString).

        CSS string value is not correctly serialized when it contains binary characters
        https://bugs.webkit.org/show_bug.cgi?id=28938

        Test: fast/css/string-quote-binary.html

        * css/CSSParser.cpp:
        (WebCore::isCSSTokenizerIdentifier):
        (WebCore::isCSSTokenizerURL):
        (WebCore::quoteCSSString):
        (WebCore::quoteCSSStringIfNeeded):
        (WebCore::quoteCSSURLIfNeeded):
        * css/CSSParser.h:
        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::cssText):
        * css/FontFamilyValue.cpp:
        (WebCore::FontFamilyValue::cssText):

2010-04-05  John Gregg  <johnnyg@google.com>

        Reviewed by Darin Adler.

        Notifications should not resolve an empty icon parameter as a relative URL
        https://bugs.webkit.org/show_bug.cgi?id=36862

        * notifications/Notification.cpp:
        (WebCore::Notification::Notification):

2010-04-05  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        Removed some unneeded type casts.

        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::cssText): Removed an unneeded cast.
        * page/Location.cpp:
        (WebCore::Location::host): Removed unneeded parentheses and cast.
        (WebCore::Location::port): Ditto.
        * platform/KURLGoogle.cpp:
        (WebCore::KURL::setPort): Ditto.
        * workers/WorkerLocation.cpp: